methods for handler implemented on Scheduler, remove methods on lists changed to removeFirst